--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
-  "name": "dashboard",
+  "name": "revenue-protection-dashboard",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Revenue Protection Dashboard for Contractor Businesses",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/brian-agent/dashboard.git"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "dashboard",
+    "contractor",
+    "revenue-protection",
+    "plumbing",
+    "hvac",
+    "electrician"
+  ],
+  "author": "Brian",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/brian-agent/dashboard/issues"
@@ -25,5 +34,9 @@
     "react-bootstrap": "^2.10.10",
     "react-dom": "^19.2.4",
     "recharts": "^3.7.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.0",
+    "vite": "^4.5.0"
   }
 }
